# AdamsAI

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
app/: config.py  database.py  main.py  models.py  schemas.py
app/repositories/: __init__.py  audio_repository.py  prompt_template_repository.py  summary_repository.py  transcript_repository.py  video_repository.py
app/routers/: __init__.py  audios.py  prompt_templates.py  summaries.py  transcripts.py  videos.py
app/services/: __init__.py  audio_service.py  prompt_template_service.py  stt_service.py  summary_service.py  video_service.py
app/utils/: audio_utils.py  downloader.py  file_utils.py  validators.py  video_utils.py
docs/: backend.md  frontend_integration_plan.md
frontend/js/: api.js  audios.js  components.js  dashboard.js  summaries.js  templates.js  transcripts.js  utils.js  videos.js  workflow.js
frontend/pages/: index.html  summaries.html  templates.html  transcripts.html  videos.html  workflow.html
frontend/templates/: audios.html  base.html  index.html  summaries.html  templates.html  transcripts.html  videos.html  workflow.html
storage/: app.db
tests/: conftest.py  test_setup.py
tests/test_repositories/: test_audio_repository.py  test_prompt_template_repository.py  test_summary_repository.py  test_transcript_repository.py  test_video_repository.py
tests/test_routers/: __init__.py  test_audios_router.py  test_summaries_router.py  test_transcripts_router.py  test_videos_router.py
tests/test_services/: test_audio_service.py  test_stt_service.py  (+2 more)
