[project]
name = "adamsai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "alembic==1.13.1",
    "fastapi==0.109.0",
    "httpx==0.26.0",
    "moviepy==1.0.3",
    "openai==1.10.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "pydub==0.25.1",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov>=7.0.0",
    "python-dotenv==1.0.0",
    "python-magic==0.4.27",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.25",
    "uvicorn[standard]==0.27.0",
    "yt-dlp>=2025.11.12",
]
